--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: cpp
-compiler: clang
+compiler:
+- clang++
+- g++
 before_install:
 - sudo apt-get install pkg-config clang
 - sudo apt-get install libglm-dev libglew1.6-dev libglfw-dev
-install: make
 script: make
+
